Completed draft of introduction

--- a/latex/kant-aufsatz.tex
+++ b/latex/kant-aufsatz.tex
@@ -32,7 +32,7 @@
 
 % Document Metadata
 \title{
-  \textbf{\textsc{Aufsatz über die Kritik}} \\ Working-Title
+  \textbf{\textsc{Aufsatz über die Kritik:}} \\ Or Otherwise, a Working Title: \\ What is a "Synthetic Unity of Apperception", \\ and \emph{is it a Soul?!?}
 }
 \author{
   By Shen Zhou Hong \and St. John's College
@@ -47,7 +47,8 @@
 
 % Includes content body. If the essay is very long, it might make sense to split
 % the content across multiple .tex files, and include them all here, e.g.
-% \input{sections/preamble.tex}
+%\input{sections/preamble.tex}
+\input{sections/intro.tex}
 \input{sections/body.tex}
 \clearpage
 \input{sections/endpage.tex}
