Added plausible title, and a stylistic bridge for introduction

--- a/latex/kant-aufsatz.tex
+++ b/latex/kant-aufsatz.tex
@@ -32,7 +32,7 @@
 
 % Document Metadata
 \title{
-  \textbf{\textsc{Aufsatz über die Kritik:}} \\ Or Otherwise, a Working Title: \\ What is a "Synthetic Unity of Apperception", \\ and \emph{is it a Soul?!?}
+  \textbf{\textsc{A Traveller's Journal \\ of the Critique:}} \\ Adventure in the Land of Transcendental Metaphysics
 }
 \author{
   By Shen Zhou Hong \and St. John's College
