Added alternative Penguin edition translation of the Critique

--- a/sources/citations.bib
+++ b/sources/citations.bib
@@ -1,4 +1,4 @@
-@book{critique,
+@book{hackett,
   title =     {Critique of Pure Reason},
   author =    {Immanuel Kant and Werner S. Pluhar and Patricia Kitcher and James W. Ellington},
   publisher = {Hackett Publishing Company, Inc.},
@@ -6,6 +6,28 @@
   year =      {1996},
   series =    {},
   edition =   {Paperback},
+  volume =    {},
+}
+
+@book{penguin,
+  title =     {Critique of pure reason},
+  author =    {Immanuel Kant and Marcus Weigelt and Friedrich Max Müller},
+  publisher = {Penguin Books},
+  isbn =      {9780140447477, 0140447474},
+  year =      {2007},
+  series =    {Penguin classics},
+  edition =   {},
+  volume =    {},
+}
+
+@book{german,
+  title =     {Kritik Der Reinen Vernunft},
+  author =    {Immanuel Kant and J. Timmermann and H. Klemme},
+  publisher = {Koch, Neff \& Oetinger \& Co},
+  isbn =      {3787313192,9783787313198},
+  year =      {1956},
+  series =    {Philosophische Bibliothek},
+  edition =   {Nach der 1. und 2. Originalausg},
   volume =    {},
 }
 
@@ -17,16 +39,5 @@
   year =      {2004},
   series =    {Cambridge Texts in the History of Philosophy},
   edition =   {},
-  volume =    {},
-}
-
-@book{kritik,
-  title =     {Kritik Der Reinen Vernunft},
-  author =    {Immanuel Kant and J. Timmermann and H. Klemme},
-  publisher = {Koch, Neff \& Oetinger \& Co},
-  isbn =      {3787313192,9783787313198},
-  year =      {1956},
-  series =    {Philosophische Bibliothek},
-  edition =   {Nach der 1. und 2. Originalausg},
   volume =    {},
 }
