Layout for main essay body

--- a/latex/kant-aufsatz.tex
+++ b/latex/kant-aufsatz.tex
@@ -50,6 +50,7 @@
 %\input{sections/preamble.tex}
 \input{sections/intro.tex}
 \input{sections/body.tex}
+\input{sections/conclusion.tex}
 \clearpage
 \input{sections/endpage.tex}
 
