--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,1 +1,7 @@
-\section*{Body}
+\section*{The Three Faculties: Sensability, Understanding, Reason}
+
+\section*{The Transcendental Aesthetic}
+
+\section*{The Transcendental Analytic}
+
+\section*{The Transcendental Dialectic}
