Add supplementary table

--- a/latex/includes/packages.tex
+++ b/latex/includes/packages.tex
@@ -11,8 +11,9 @@
 
 % Optional LaTeX packages for additional functionality
 % \usepackage[noframe]{showframe}     % Debug option to show margin frames.
-% \usepackage{graphicx}               % Required for embedding images
-% \usepackage{booktabs}               % For prettier tables
+\usepackage{multirow}
+\usepackage{graphicx}               % Required for embedding images
+\usepackage{booktabs}               % For prettier tables
 \usepackage{geometry}             % Sets more "reasonable" margin-sizes
 % \usepackage{tikz}                 % Used for graphical illustrations.
 % \usetikzlibrary{calc,intersections,through,backgrounds}
