--- a/latex/includes/formatting.tex
+++ b/latex/includes/formatting.tex
@@ -11,7 +11,7 @@
 % These commands are used to change the line-spacing of the text.
 % Use \linespread{1.25} for custom line spacing.
 % See documentation at https://tex.stackexchange.com/questions/65849/
-% \doublespacing  for double-spacing
+% \doublespacing
 \onehalfspacing % for 1.5 spacing
 
 % Settings used by \usepackage[parfill]{parskip}
