--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,4 +1,26 @@
 \section*{The Transcendental Aesthetic}
+Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which seperates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this perch of aesthetics, where Kant performs the Copernican leap that upturns our world.
+
+For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects, all concepts by neccessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We reach out and `grasp' the objects that we wish to sense with some sort of sensorary ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
+
+\begin{quote}
+The capacity (a receptivity) to acquire presentations as a result of the way in which we are affected by objects is called \textbf{sensibility}. Hence by means of sensibility objects are \emph{given} to us, and it alone supplies us with \emph{intuitions}.
+
+\autocite[B33]{hackett}
+\end{quote}
+
+\noindent
+The objective, material study of our sensibility (i.e. the means in which we are receptive to sensation) is an empirical science, one that is perhaps a closer kin to ophthalmology\footnote{The medical science of eyeballs.}, than that of any rank befitting a philosopher. Hence, it is no surprise that Kant dusts away the empirical trappings of a mundane aesthetic science, to ask: "when we abstract away all matter of intuition, what is left there to remain?" For the \emph{matter} of intuition is always an object (and hence, objective, and therefore, empirical) -- to strip intuitions of their matter is to leave only their \emph{form}. There can be only two possibilities regarding the \emph{formal} nature of intuition. Either we are to deny it's existence altogether -- as to say that the evaporation of intuitive matter yields only a bare, depositless vapour -- or we are to acknowledge that there is indeed some metaphysical residue, a crystalisation of formal structure that underlies all human intuition.
+
+The first case is an apparent impossibility to Kant, one that even a tourist can understand on grounds both metaphysical and mundane. For to argue that there is no formal nature behind human intuition is to accept that all intuitions are inherently structureless. It is to accept that there is no deep, underlying relationship between sensorary intuitions -- a nihlistic capitulation so kraven that Kant devotes the majority of the Critique's introduction (as well as a good part of his \emph{Prolegomena}) in refuting. He argues that the lack of an a priori, formal structure behind intuition will prevent the apodeictic\footnote{necessarily or self-evidently true.} certainty of mathematics and geometry. Likewise, to use a more mundane analogy -- the mundane, material nature of the human sensorary organs by neccessity create some formal structure which will underpin our intuiton. It is no great leap to take such mundane, aesthetic a prioriae, and to make a further jump that abstracts away even the material nature of our sensorary biology -- and ask the \emph{transcendental} question, of what are the a priori forms behind intuition:
+
+\begin{quote}
+  There must, therefore, be a science of all principles of a priori sensibility; I call such a science \emph{transcendental aesthetic}. It constitutes the first part of the transcendental doctrine of elements, and stands in contrast to that [part of the] transcendental doctrine of elements which contains the principles of pure thought and is called transcendental logic.
+
+  \autocite[B36]{hackett}
+\end{quote}
+
+So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}.
 
 \section*{The Transcendental Analytic}
 
