--- a/latex/sections/intro.tex
+++ b/latex/sections/intro.tex
@@ -1,4 +1,4 @@
 \section*{Introduction}
-\emph{How is mathematics possible? How is physics possible? Is metaphysics as a science possible at all?} These are some of the questions which Immanuel Kant's \emph{Critique of Pure Reason} attempts to answer, through a systematic, and entirely novel presentation of a \emph{transcendental} metaphysics. Over the course of some eight hundred-odd pages, Kant examines the human faculties of \emph{sensability}, \emph{understanding}, and \emph{reason}, culminating in a complete metaphysical system with the ambition to serve as a foundation to all physics and a posteriori knowledge. Just exactly how successful is this Kant's endeavour, which even he himself likens to a `Copernican Revolution?' What \emph{exactly} is the `synthetic unity of apperception?' What do the dialectical `illusions' of pure reason hold, for the nature of truth in Philosophy? And are the mathematical and physical sciences truly \emph{empirical}, under the terms of Kant's transcendental foundation? This paper seeks to explore these questions, and more, in a critical discourse of Kant's Critique. Thus, one may call this essay a Critique of the Critique of Pure Reason: a paper that seeks not to refute Kant's thesis, but rather more of a traveller's journel. A journal that documents our expedition through this strange new country, that asks both the tourist's questions -- as well as record all the sights and marvels of the trip.
+\emph{How is mathematics possible? How is physics possible? Is metaphysics as a science possible at all?} These are some of the questions which Immanuel Kant's \emph{Critique of Pure Reason} attempts to answer, through a systematic, and entirely novel presentation of a \emph{transcendental} metaphysics. Over the course of some eight hundred-odd pages, Kant examines the human faculties of \emph{sensability}, \emph{understanding}, and \emph{reason}, culminating in a complete metaphysical system with the ambition to serve as a foundation to all physics and a posteriori knowledge. Just exactly how successful is Kant's endeavour, which even he himself likens to a `Copernican Revolution?' What \emph{exactly} is the `synthetic unity of apperception?' What do the dialectical `illusions' of pure reason hold, for the nature of truth in Philosophy? And are the mathematical and physical sciences truly \emph{empirical}, under the terms of Kant's transcendental foundation? This paper seeks to explore these questions, and more, in a critical discourse of Kant's Critique. Thus, one may call this essay a Critique of the Critique of Pure Reason: a paper that seeks not to refute Kant's thesis, but rather more of a traveller's journel. A journal that documents our expedition through this strange new country, that asks both the tourist's questions -- as well as record all the sights and marvels of the trip.
 
-We will begin our metaphysical adventure with the Critique's \emph{Transcendental Doctrine of the Elements}, where we walk along with Kant on his journey to discover the a priori foundations (i.e. the epitomous \emph{elements}) of all human knowledge. Starting at the trailhead of \emph{Transcendental Aesthetics}, we will explore the human faculty of sensibility, to find the a priori forms which underpin all sensate intuition. Moving on to the \emph{Transcendental Logic}, we will attempt the very same campaign upon the faculty of understanding, making the demonstrative leap from \emph{judgements} to \emph{categories}, all in pursuit of the \emph{pure concepts of understanding}. With our prize in hand, we will follow Kant as he unifies the two faculties, and explore \emph{cognition} -- the only heir to \emph{sensability} and \emph{understanding}'s union. And finally, once we have summitted the peaks of this Analytic mountain, we will at last be able to survey the island of Kant's \emph{transcendental metaphysics}. We will see both the beaches of a priori certainty -- as well as the fogbanks of the stormy, dialectical sea.
+We will begin our metaphysical adventure with the Critique's \emph{Transcendental Doctrine of the Elements}, where we walk along with Kant on his journey to discover the a priori foundations (i.e. the epitomous \emph{elements}) of all human knowledge. Starting at the trailhead of \emph{Transcendental Aesthetics}, we will explore the human faculty of sensibility, to find the a priori forms which underpin all sensate intuition. Moving on to the \emph{Transcendental Logic}, we will attempt the very same campaign upon the faculty of understanding, making the demonstrative leap from \emph{judgements} to \emph{categories}, all in pursuit of the \emph{pure concepts of understanding}. With our prize in hand, we will follow Kant as he unifies the two faculties, and explore \emph{cognition} -- the only heir to \emph{sensability} and \emph{understanding}'s union. And finally, once we have summitted the peaks of this Analytic mountain, we will at last be able to survey the island of Kant's \emph{transcendental metaphysics}. We will see both the beaches of a priori certainty -- as well as the farther fogbanks of the stormy, dialectical sea.
