Completed the section on the transcendental aesthetic

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -20,7 +20,45 @@ The first case is an apparent impossibility to Kant, one that even a tourist can
   \autocite[B36]{hackett}
 \end{quote}
 
-So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}.
+So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}. We are guided to a view of the twin peaks of space (which founds our \emph{outer sense}) and time (which founds our \emph{inner sense}). These mountains serve as the core geology of our transcendental landscape -- we are cautioned against thinking that there are any other -- the lesser distractions of colour, extention, or motion are but superficial molehills which take no part in the a priori bedrock of transcendental aesthetics:
+
+\begin{quote}
+  Transcendental aesthetic cannot contain more than these two elements, i.e., space and time. This is evident from the fact that all other concepts belonging to sensibility presuppose something empirical.
+
+  \autocite[B58]{hackett}
+\end{quote}
+
+To the untrained glaze of the tourist, it is reasonable for us to ask: "just how firm are the grounds upon which such mountains protrude?" Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility -- then all of our worldly intuitions are founded upon a mirage -- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism forever, should we not be rescued by Kant's ready alpenstock\footnote{a sherpherd's trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the neccessary a priori which preconditions intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e. not \emph{subjective}). Likewise, by not being present in the object (i.e. not a property, accident, or attribute) -- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
+
+\begin{quote}
+Hence we assert that space is empirically real (as regards all possible outer experience), despite asserting that space is transcendentally ideal, i.e., that it is nothing as soon as we omit [that space is] the condition of the possibility of all experience and suppose space to be something underlying things in themselves.
+
+\autocite[B45]{hackett}
+\end{quote}
+
+Thus concludes the presentation (or to use Euclidean language, the \emph{enunciation}) of the two transcendental elements of space and time, from the metaphysical science of the transcendental aesthetic. The proper, demonstrative proof of these elements are naturally contained within Kant's \emph{Critique} itself, to which this simple tourist's journel hopes not to recreate. However, naturally it is within the mete of every foreign visitor to question their guide. Hence we will ask (with the characteristic brazenness of a tourist): "to what is the industry of such metaphysical mountains?" Are these mountains mere wastes, suitable for no further purpose -- or do they yield productive quarries, that lead us to further knowledge in metaphysics? These transcendental elements of space and time are ultimately useful, for in their nature as the a priori forms that neccessiate all intuition, they define the boundaries for what intuition can yield.
+
+For one, it is readily apparent that should space and time be the necessary condition for intuition, it is impossible for there to be any intuitive knowledge of objects without the forms of space and time. Such knowledge of the \emph{thing-in-itself}, the cognition of an object without the formal conditions of space and time, is impossible. This impossibility of knowing the thing-in-itself serves as a hard boundary for what intuition is capable of, marking all of our intuitive knowledge as knowledge of appearances alone:
+
+\begin{quote}
+  [space and time] being merely conditions of sensibility, these a priori sources of cognition determine their own bounds; viz., they determine that they apply to objects merely insofar as these are regarded as appearances, but do not exhibit things in themselves. Appearances are the sole realm where these a priori sources of cognition are valid; if we go outside that realm, there is no further objective use that can be made of them.
+
+  \autocite[B56]{hackett}
+\end{quote}
+
+\noindent
+And yet, such a border is not a destructive one -- these constraints of the sensible condition are not the concessions of foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we percieve. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the neccessary a priori conditions for their appearance as the foundation for our reasoning.
+
+Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvelous one. It's metaphysical duality: the synthetic a prioriae both empirially real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Skepticism and Idealism, while avoiding the nihlistic excesses of both. Such a treatment on intuition is already sufficient to serve as the foundation to mathematical intuition, which is indeed highly spacial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
+
+\begin{quote}
+  There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
+
+  \autocite[B72]{hackett}
+\end{quote}
+
+\noindent
+Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conqueor in order to view the entirety of the Kantian island. Our guide hurries us forth -- eager to apply the method of analysis, to the faculty of understanding. We will not have him wait.
 
 \section*{The Transcendental Analytic}
 
