Edited and spell-checked the section on the transcendental aesthetics

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,7 +1,7 @@
 \section*{The Transcendental Aesthetic}
-Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which seperates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this perch of aesthetics, where Kant performs the Copernican leap that upturns our world.
+Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this perch of aesthetics, where Kant performs the Copernican leap that upturns our world.
 
-For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects, all concepts by neccessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We reach out and `grasp' the objects that we wish to sense with some sort of sensorary ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
+For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
 
 \begin{quote}
 The capacity (a receptivity) to acquire presentations as a result of the way in which we are affected by objects is called \textbf{sensibility}. Hence by means of sensibility objects are \emph{given} to us, and it alone supplies us with \emph{intuitions}.
@@ -10,9 +10,9 @@ The capacity (a receptivity) to acquire presentations as a result of the way in 
 \end{quote}
 
 \noindent
-The objective, material study of our sensibility (i.e. the means in which we are receptive to sensation) is an empirical science, one that is perhaps a closer kin to ophthalmology\footnote{The medical science of eyeballs.}, than that of any rank befitting a philosopher. Hence, it is no surprise that Kant dusts away the empirical trappings of a mundane aesthetic science, to ask: "when we abstract away all matter of intuition, what is left there to remain?" For the \emph{matter} of intuition is always an object (and hence, objective, and therefore, empirical) -- to strip intuitions of their matter is to leave only their \emph{form}. There can be only two possibilities regarding the \emph{formal} nature of intuition. Either we are to deny it's existence altogether -- as to say that the evaporation of intuitive matter yields only a bare, depositless vapour -- or we are to acknowledge that there is indeed some metaphysical residue, a crystalisation of formal structure that underlies all human intuition.
+The objective, material study of our sensibility (i.e. the means in which we are receptive to sensation) is an empirical science, one that is perhaps closer kin to ophthalmology\footnote{The medical science of eyeballs.}, than that of any rank befitting a philosopher. Hence, it is no surprise that Kant dusts away the empirical trappings of a mundane aesthetic science, to ask: "when we abstract away all matter of intuition, what is left there to remain?" For the \emph{matter} of intuition is always an object (and hence, objective, and therefore, empirical) -- to strip intuitions of their matter is to leave only their \emph{form}. There can be only two possibilities regarding the \emph{formal} nature of intuition. Either we are to deny its existence altogether -- as to say that the evaporation of intuitive matter yields only a bare, deposit-less vapour -- or we are to acknowledge that there is indeed some metaphysical residue, a crystallisation of formal structure that underlies all human intuition.
 
-The first case is an apparent impossibility to Kant, one that even a tourist can understand on grounds both metaphysical and mundane. For to argue that there is no formal nature behind human intuition is to accept that all intuitions are inherently structureless. It is to accept that there is no deep, underlying relationship between sensorary intuitions -- a nihlistic capitulation so kraven that Kant devotes the majority of the Critique's introduction (as well as a good part of his \emph{Prolegomena}) in refuting. He argues that the lack of an a priori, formal structure behind intuition will prevent the apodeictic\footnote{necessarily or self-evidently true.} certainty of mathematics and geometry. Likewise, to use a more mundane analogy -- the mundane, material nature of the human sensorary organs by neccessity create some formal structure which will underpin our intuiton. It is no great leap to take such mundane, aesthetic a prioriae, and to make a further jump that abstracts away even the material nature of our sensorary biology -- and ask the \emph{transcendental} question, of what are the a priori forms behind intuition:
+The first case is an apparent impossibility to Kant, one that even a tourist can understand on grounds both metaphysical and mundane. For to argue that there is no formal nature behind human intuition is to accept that all intuitions are inherently structureless. It is to accept that there is no deep, underlying relationship between sensory intuitions -- a nihilistic capitulation so craven that Kant devotes the majority of the Critique's introduction (as well as a good part of his \emph{Prolegomena}) in refuting. He argues that the lack of an a priori, formal structure behind intuition will prevent the apodeictic\footnote{necessarily or self-evidently true.} certainty of mathematics and geometry. Likewise, to use a more mundane analogy -- the mundane, material nature of the human sensory organs by necessity create some formal structure which will underpin our intuition. It is no great leap to take such mundane, aesthetic a prioriae, and to make a further jump that abstracts away even the material nature of our sensory biology -- and ask the \emph{transcendental} question, of what are the a priori forms behind intuition:
 
 \begin{quote}
   There must, therefore, be a science of all principles of a priori sensibility; I call such a science \emph{transcendental aesthetic}. It constitutes the first part of the transcendental doctrine of elements, and stands in contrast to that [part of the] transcendental doctrine of elements which contains the principles of pure thought and is called transcendental logic.
@@ -20,7 +20,7 @@ The first case is an apparent impossibility to Kant, one that even a tourist can
   \autocite[B36]{hackett}
 \end{quote}
 
-So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}. We are guided to a view of the twin peaks of space (which founds our \emph{outer sense}) and time (which founds our \emph{inner sense}). These mountains serve as the core geology of our transcendental landscape -- we are cautioned against thinking that there are any other -- the lesser distractions of colour, extention, or motion are but superficial molehills which take no part in the a priori bedrock of transcendental aesthetics:
+So what do we find, in this new-found, metaphysical science, of the transcendental aesthetic? What are the underlying a priori forms behind pure intuition? Kant, the ever-obliging tour guide, is happy to answer us, as we begin our hike within the boundaries of the transcendental aesthetic itself. "In the course of that inquiry it will be found that there are two pure forms of sensible intuition, which are principles for a priori cognition: viz., space and time. We now proceed to the task of examining these" \autocite[B37]{hackett}. We are guided to a view of the twin peaks of space (which founds our \emph{outer sense}) and time (which founds our \emph{inner sense}). These mountains serve as the core geology of our transcendental landscape -- we are cautioned against thinking that there are any other -- the lesser distractions of colour, extension, or motion are but superficial molehills which take no part in the a priori bedrock of transcendental aesthetics:
 
 \begin{quote}
   Transcendental aesthetic cannot contain more than these two elements, i.e., space and time. This is evident from the fact that all other concepts belonging to sensibility presuppose something empirical.
@@ -28,7 +28,7 @@ So what do we find, in this new-found, metaphysical science, of the transcendent
   \autocite[B58]{hackett}
 \end{quote}
 
-To the untrained glaze of the tourist, it is reasonable for us to ask: "just how firm are the grounds upon which such mountains protrude?" Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility -- then all of our worldly intuitions are founded upon a mirage -- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism forever, should we not be rescued by Kant's ready alpenstock\footnote{a sherpherd's trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the neccessary a priori which preconditions intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e. not \emph{subjective}). Likewise, by not being present in the object (i.e. not a property, accident, or attribute) -- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
+To the untrained glaze of the tourist, it is reasonable for us to ask: "just how firm are the grounds upon which such mountains protrude?" Unable to tell treacherous marsh from wholesome grassland, it is easy for us to assume that Kant's thesis has become an Idealistic one. For surely, should space and time serve as the synthetic a prioriae which underlie all sensibility -- then all of our worldly intuitions are founded upon a mirage -- some dreamy, subjective precept that is real only within our minds. Troubled by such thoughts, we would have been lost in the bogs of Idealism forever, should we not be rescued by Kant's ready alpenstock\footnote{a shepherd’s trekking pole, commonly used to navigate hazardous snowfields and wetlands.}, ever on the watch against Idealism. Space and time are \emph{empirically real}, but \emph{transcendentally ideal}. As the necessary a priori which preconditions intuition, space and time are both universal to all objects of intuition, regardless of subject (i.e. not \emph{subjective}). Likewise, by not being present in the object (i.e. not a property, accident, or attribute) -- but only in the formal nature of our intuition, space and time are \emph{transcendentally ideal}. To use Kant's words in this matter:
 
 \begin{quote}
 Hence we assert that space is empirically real (as regards all possible outer experience), despite asserting that space is transcendentally ideal, i.e., that it is nothing as soon as we omit [that space is] the condition of the possibility of all experience and suppose space to be something underlying things in themselves.
@@ -36,7 +36,7 @@ Hence we assert that space is empirically real (as regards all possible outer ex
 \autocite[B45]{hackett}
 \end{quote}
 
-Thus concludes the presentation (or to use Euclidean language, the \emph{enunciation}) of the two transcendental elements of space and time, from the metaphysical science of the transcendental aesthetic. The proper, demonstrative proof of these elements are naturally contained within Kant's \emph{Critique} itself, to which this simple tourist's journel hopes not to recreate. However, naturally it is within the mete of every foreign visitor to question their guide. Hence we will ask (with the characteristic brazenness of a tourist): "to what is the industry of such metaphysical mountains?" Are these mountains mere wastes, suitable for no further purpose -- or do they yield productive quarries, that lead us to further knowledge in metaphysics? These transcendental elements of space and time are ultimately useful, for in their nature as the a priori forms that neccessiate all intuition, they define the boundaries for what intuition can yield.
+Thus concludes the presentation (or to use Euclidean language, the \emph{enunciation}) of the two transcendental elements of space and time, from the metaphysical science of the transcendental aesthetic. The proper, demonstrative proof of these elements are naturally contained within Kant's \emph{Critique} itself, to which this simple tourist's journal dares not to re-attempt. However, naturally it is within the mete of every foreign visitor to question their guide. Hence we will ask (with the characteristic brazenness of a tourist): "to what is the industry of such metaphysical mountains?" Are these mountains mere wastes, suitable for no further purpose -- or do they yield productive quarries, that lead us to further knowledge in metaphysics? These transcendental elements of space and time are ultimately useful, for in their nature as the a priori forms that necessitate all intuition, they define the boundaries for what intuition can yield.
 
 For one, it is readily apparent that should space and time be the necessary condition for intuition, it is impossible for there to be any intuitive knowledge of objects without the forms of space and time. Such knowledge of the \emph{thing-in-itself}, the cognition of an object without the formal conditions of space and time, is impossible. This impossibility of knowing the thing-in-itself serves as a hard boundary for what intuition is capable of, marking all of our intuitive knowledge as knowledge of appearances alone:
 
@@ -47,9 +47,9 @@ For one, it is readily apparent that should space and time be the necessary cond
 \end{quote}
 
 \noindent
-And yet, such a border is not a destructive one -- these constraints of the sensible condition are not the concessions of foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we percieve. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the neccessary a priori conditions for their appearance as the foundation for our reasoning.
+And yet, such a border is not a destructive one -- these constraints of the sensible condition are not the concessions of foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we perceive. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the necessary a priori conditions for their appearance as the foundation for our reasoning.
 
-Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvelous one. It's metaphysical duality: the synthetic a prioriae both empirially real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Skepticism and Idealism, while avoiding the nihlistic excesses of both. Such a treatment on intuition is already sufficient to serve as the foundation to mathematical intuition, which is indeed highly spacial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
+Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Scepticism and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on intuition is already sufficient to serve as the foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
 
 \begin{quote}
   There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
@@ -58,7 +58,7 @@ Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a m
 \end{quote}
 
 \noindent
-Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conqueor in order to view the entirety of the Kantian island. Our guide hurries us forth -- eager to apply the method of analysis, to the faculty of understanding. We will not have him wait.
+Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. Our guide hurries us forth -- eager to apply this same method of analysis, to the faculty of understanding. We will not have him wait.
 
 \section*{The Transcendental Analytic}
 
