Small edit on the ultimate paragraph in the aesthetic section

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -58,7 +58,7 @@ Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a m
 \end{quote}
 
 \noindent
-Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. Our guide hurries us forth -- eager to apply this same method of analysis, to the faculty of understanding. We will not have him wait.
+Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. Our guide hurries us forth -- eager to apply this same method of analysis, to the faculty of understanding. We will not make him wait.
 
 \section*{The Transcendental Analytic}
 
