Rephrase the end of the concluding paragraph on the aesthetic for flow

--- a/latex/kant-aufsatz.tex
+++ b/latex/kant-aufsatz.tex
@@ -32,7 +32,7 @@
 
 % Document Metadata
 \title{
-  \textbf{\textsc{A Traveller's Journal \\ of the Critique:}} \\ Adventure in the Land of Transcendental Metaphysics
+  \textbf{\textsc{A Tourist's Journal \\ of the Critique:}} \\ Adventures in the Land of Transcendental Metaphysics
 }
 \author{
   By Shen Zhou Hong \and St. John's College
